--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -17,21 +17,30 @@ antoine.carpentier@vub.ac.be, pierre.gerard@ulb.ac.be, julian.schembri@ulb.ac.be
 \maketitle
 
 \begin{abstract}
-  \todo{un bon abstract}
-  The purpose of this research is to study a reinforcement learning approaches to building a cold-start recommender system. The reinforcement learning task formulate the problem of recommendation as learning user preferences while doing an exploration-exploitation trade-off thus allowing us to provide to the user novelty content. This paper explore a content based learning as well as collaborative filtering learning, both yielding viable recommendation results.
+  The purpose of this research is to study a reinforcement learning approaches to building a cold-start recommender system. The reinforcement learning task formulate the problem of interactive recommendation as learning user preferences while doing an exploration-exploitation trade-off thus allowing us to provide to the user novelty content. This paper explore a content based learning as well as collaborative filtering learning, both yielding viable recommendation results.
 \end{abstract}
 
 \section{Introduction}
 
 
-People sometimes have to settle on decisions without sufficient individual experience of the choices. In regular daily existence, we depend on  recommendations from other individuals either by listening in on conversations, by suggestion of movies, tv show, holiday destination, etc. Recommender systems help and enlarge this normal social process. 
+People sometimes have to settle on decisions without sufficient individual experience of the choices. In regular daily existence, we depend on  recommendations from other individuals either by listening in conversations or by direct suggestion of movies, tv show, holiday destination, etc. Recommender systems help and enlarge this normal social process. 
 
-In a standard recommender system, individuals usually give behaviour information as data sources, which the system then interpret to provide recommendation to the beneficiaries. The recommender's value lies in its capacity to make great matches between the recommenders and those looking for suggestions. Such systems are the strength of content providers such Netflix \cite{netflix-article-recommender} or YouTube \footnote{http://www.youtube.com} allowing them to make their content more attractive in order to increase viewing and in order to optimise its monetisation. It allows to infer customer's center of interest and also allows to detect, if a behaviour is a general trend between customers, potential improvements in content to better meet the expectations of the public.
-
-\todo{brief state of the art}
+In a recommender system, individuals usually give behaviour information as data sources, which the system then use to learn users preferences in order to provide recommendation. The recommender's value lies in its capacity to make great matches between the recommenders and those looking for suggestions. Such systems are the strength of content providers such Netflix \cite{netflix-article-recommender} or YouTube \footnote{http://www.youtube.com} allowing them to make their content more attractive in order to increase viewing and in order to optimise its monetisation. It allows to infer customer's center of interest and also allows to detect, if a behaviour is a general trend between customers, potential improvements in content to better meet the expectations of the public. 
 
 
-\todo{contenu du papier, approche q learning et pourquoi}
+This work follows the steps of \cite{main} who have implemented a music recommendation system using q-learning. In their research, \cite{main} explains was could be done to adapt their work to movies recommendation as well as a suggestion trying a collaborative filtering. So this work, is mainly about adapting their strategy of music recommendation to movies recommendation as well as exploring new strategies.
+
+The problem of movie recommendation is modelised as a multi-armed bandit [\cite{sutton1998reinforcement}] thus allowing it to have the following advantages. 
+
+\begin{itemize}
+	\item The learning is done by incorporating user feedback (i.e. ratings of movies) into recommendations allowing us to fit diversity in users preferences,
+	\item The model takes into account novelty of movies and repetitions thus not recommending movies watched recently,
+	\item The learngin balances exploration and exploitation thus mitigating the difficulty of cold-start,
+	\item The model can take into account both a content based approaches and a collaborative filtering approaches.
+\end{itemize}
+
+
+In the following sections, we will firstly introduce methods used. Then we will review different results before discussing them.
 
 \section{Methods}
 
@@ -41,6 +50,7 @@ The data used is originated from IMDb \footnote{http://www.imdb.com/}. It is two
 
 \subsection{Features extraction and selection}
 
+The first challenges was
 \todo{ les fetaures selectionne et encodage onehot et pourquoi}
 
 
