--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -9,6 +9,15 @@
   publisher={ACM}
 }
 
+@book{sutton1998reinforcement,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  volume={1},
+  number={1},
+  year={1998},
+  publisher={MIT press Cambridge}
+}
+
 @article{algoandmethodsinrecommender,
   title={Algorithms and methods in recommender systems},
   author={Asanov, Daniar},
