--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -50,8 +50,29 @@ The data used is originated from IMDb \footnote{http://www.imdb.com/}. It is two
 
 \subsection{Features extraction and selection}
 
-The first challenges was
+The first challenges was to extract the feature from the IMDb homemade format and made into a clearer \textit{csv} format.
+
+In order to reduce the complexity of the algorithm and focus on the learning matter and not transforming the problem into a big data and parallelisation problem problem, a subset of movie, a selection of user and movies adding up to about 430.000 user-movie pair have been made.
+
+Then for each movie and to also keep the problem simple and focus on the learning matter, we selected genre and year as features for each movie. Those two features are categorical variable and in order to learn a single weight per feature (i.e. drama, crime, ..), a onehot encoding have been apply to them resulting in a blow up of the feature space to $n$ features, $n$ being the number of category.
+
+\begin{table}[h]
+\center{
+\begin{tabular}{|c|c|c|c|c|}\hline
+ Name       & Drama & Crime & Thriller & ... \\ \hline
+Movie 1  & 0   & 0 & 1 & ...\\ \hline
+Movie 2  & 1 & 1 & 1 & ...\\ \hline
+Movie 3  & 0 &   0 & 0 & ...\\ \hline
+... & ... & ... &  ... \\ \hline
+\end{tabular}
+}
+\vskip 0.25cm
+\caption{Movise feature space}
+\end{table}
+
+
 \todo{ les fetaures selectionne et encodage onehot et pourquoi}
+Then most of the feature were categorical variable
 
 
 \subsection{Dimension reduction}
