--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -26,6 +26,13 @@
 }
 
 
+@book{principalcompanalysis,
+  title={Principal component analysis},
+  author={Jolliffe, Ian},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
 @book{recommendersystemhandbook,
   title={Introduction to recommender systems handbook},
   author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
