--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -73,8 +73,8 @@ Movie 3  & 0 &   0 & 0 & ...\\ \hline
 
 \subsection{Dimension reduction}
 
-\todo{ comment et pouquoi on a fait une reduction de dimension}
-In order to 
+The resulting feature space of the feature extraction process is quite sizable thus making the recommendation quite computational intensive.
+In order to deal with that problem, the feature space size has been reduced using Principal Components Analysis (PCA) [\cite{principalcompanalysis}]  
 
 
 \subsection{Multi armed bandit modelisation}
