--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -63,7 +63,7 @@ Then for each movie and to also keep the problem simple and focus on the learnin
 Movie 1  & 0   & 0 & 1 & ...\\ \hline
 Movie 2  & 1 & 1 & 1 & ...\\ \hline
 Movie 3  & 0 &   0 & 0 & ...\\ \hline
-... & ... & ... &  ... \\ \hline
+... & ... & ... &  ...  &  ... \\ \hline
 \end{tabular}
 }
 \vskip 0.25cm
@@ -74,7 +74,9 @@ Movie 3  & 0 &   0 & 0 & ...\\ \hline
 \subsection{Dimension reduction}
 
 The resulting feature space of the feature extraction process is quite sizable thus making the recommendation quite computational intensive.
-In order to deal with that problem, the feature space size has been reduced using Principal Components Analysis (PCA) [\cite{principalcompanalysis}]  
+In order to deal with that problem, the feature space size has been reduced using Principal Components Analysis (PCA) [\cite{principalcompanalysis}].
+
+\todo{how does it work}  
 
 
 \subsection{Multi armed bandit modelisation}
