--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -92,18 +92,21 @@ For our dataset we kept, the 20-first principal components out of about 50, keep
 
 \subsection{Multi armed bandit modelling}
 
-The multi-armed bandit is a intensively studied reinforcement learning dilemma. It consists of a bandit (usually a casino slot machine)
+The multi-armed bandit is a intensively studied reinforcement learning dilemma. It consists of a bandit (usually a casino slot machine) with $K$ arms, each giving a payoff $r$ sampled from an unknown probability distribution $p_{i}$. The player has a defined $n$ number of pulls and its goal is to choose wisely which arm to play in order to maximise the total payoff.
 
-\todo{comment on a modelise le probelem en bandit}
+\subsubsection{Content based}
 
-\subsection{Selections algorithms}
+\todo{expliquer comme dans le paier}
 
-\todo{description des approches utilisés}
+\subsubsection{Collaborative filtering}
+
+\todo{expliquer l'adptattion pour faire du collaborative}
 
 
-\subsection{Content based or collaborative filtering}
+\subsection{Bandit strategies}
 
-\todo{expliquer ces deux approches}
+\todo{faire une subsubsection avec chaque dapproches utilisés, greedy, linucb, greedyucb, bayes}
+
 
 
 \section{Results}
