--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -25,6 +25,13 @@
   year={2011}
 }
 
+@article{ebbinghaus1913memory,
+  title={Memory: A Contribution to Experimental Psychology, translated by Henry A},
+  author={Ebbinghaus, Hermann},
+  journal={Ruger \& Clara E. Bussenius. New York: Teachers College, Columbia University},
+  year={1913}
+}
+
 
 @book{principalcompanalysis,
   title={Principal component analysis},
