--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -153,18 +153,54 @@ The novelty if defined similarly as above, so the expected rating is :
 
 \subsection{Bandit strategies}
 
-\todo{faire une subsubsection avec chaque dapproches utilisés, greedy, linucb, greedyucb, bayes}
+\subsubsection{Random}
 
+\todo{Random}
+
+\subsubsection{Greedy-epsilon}
+
+\todo{Greedy-epsilon}
+
+\subsubsection{Greedy time dependent}
+
+\todo{Greedy time dependent}
+
+\subsubsection{GreedyUCB}
+
+\todo{GreedyUCB}
+
+\subsubsection{BayesUCB}
+
+\todo{BayesUCB}
+
+\subsubsection{Bayes inference}
+
+\todo{Bayes inference}
 
 \subsection{Simulation}
 
+\todo{explain how simulation is done}
+
 \section{Results}
+
+\todo{simple result of adaptation of music paper to movie paper avec greedy vs random}
+
+\todo{more diverse choice in bandit strategies including}
+
+\todo{result of collaborative filtering}
 
 
 \section{Discussion}
 
+\todo{would the result be correct recommendation, is it a viable way to do recommendation ? (expected result vs reality, time for a recommendation, accuracy, ....)}
 
-\section{Acknowledgements}
+\todo{which strategy to use and which not to use ( including why bayes-ucb is not viable (way too much time an requires a user study to bootsrap)}
+
+\todo{content based vs collaborative, is collaborative viable}
+
+\todo{futur work, what could be done if you give me 10 IA guys for a week}
+
+\section{Conclusion}
 
 blabla
 
