--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -68,3 +68,12 @@
  keywords = {Recommender systems},
 }
 
+
+@inproceedings{li2010contextual,
+  title={A contextual-bandit approach to personalized news article recommendation},
+  author={Li, Lihong and Chu, Wei and Langford, John and Schapire, Robert E},
+  booktitle={Proceedings of the 19th international conference on World wide web},
+  pages={661--670},
+  year={2010},
+  organization={ACM}
+}
