--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -19,7 +19,7 @@ antoine.carpentier@vub.ac.be, pierre.gerard@ulb.ac.be, julian.schembri@ulb.ac.be
 \maketitle
 
 \begin{abstract}
-  The purpose of this research is to study a reinforcement learning approaches to building a cold-start recommender system. The reinforcement learning task formulate the problem of interactive recommendation as learning user preferences while doing an exploration-exploitation trade-off thus allowing us to provide to the user novelty content. This paper explore a content based learning as well as collaborative filtering learning, both yielding viable recommendation results.
+  The purpose of our research is to study reinforcement learning approaches to building a movie recommender system. We formulate the problem of interactive recommendation as a contextual multi-armed bandit, learning user preferences recommanding new movies and receiving their ratings. We show that using reinforcement learning solves the problem of exploitation-exploration tradeoff and the cold-start problem. We integrate the novelty of movies to the model. We explore a content based approach as well as a collaborative filtering approach and both yield viable recommendation results.
 \end{abstract}
 
 \section{Introduction}
