--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -77,3 +77,29 @@
   year={2010},
   organization={ACM}
 }
+
+@article{kuleshov2014algorithms,
+  title={Algorithms for multi-armed bandit problems},
+  author={Kuleshov, Volodymyr and Precup, Doina},
+  journal={arXiv preprint arXiv:1402.6028},
+  year={2014}
+}
+
+@inproceedings{cesa1998finite,
+  title={Finite-Time Regret Bounds for the Multiarmed Bandit Problem.},
+  author={Cesa-Bianchi, Nicol{\`o} and Fischer, Paul},
+  booktitle={ICML},
+  pages={100--108},
+  year={1998},
+  organization={Citeseer}
+}
+
+
+@inproceedings{vermorel2005multi,
+  title={Multi-armed bandit algorithms and empirical evaluation},
+  author={Vermorel, Joannes and Mohri, Mehryar},
+  booktitle={European conference on machine learning},
+  pages={437--448},
+  year={2005},
+  organization={Springer}
+}
