--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -178,10 +178,10 @@ However, the effectiveness of variating $\epsilon$ over time is disputed by \cit
 
 \todo{GreedyUCB}
 
-\subsubsection{Bayes UCB}
+\subsubsection{Exact Bayesian methods}
 
-\todo{BayesUCB}
-% """Priors for the Bayesian models were set as uninformative ones or chosen based on preliminary sim- ulation and user studies""" < ce qui notre tache très difficile
+\todo{Bayesian methods}
+% """Priors for the Bayesian models were set as uninformative ones or chosen based on preliminary simulation and user studies""" < ce qui notre tache très difficile
 
 \subsubsection{Bayes inference}
 
@@ -189,7 +189,7 @@ However, the effectiveness of variating $\epsilon$ over time is disputed by \cit
 
 \subsection{Simulation}
 
-We conducted an empirical efficiency study of the algorithms mentioned above as well as the content based and collaborative filtering modeling. 
+We conducted an empirical efficiency study of the algorithms mentioned above as well as the content based and collaborative filtering modelling. 
 
 Experiments were conducted on personal computer and the programming language $python$ was used to implement models and algorithms.
 
@@ -201,10 +201,15 @@ The simulation consisted on simulating the interaction of a user and a recommend
 
 \todo{simple result of adaptation of music paper to movie paper avec greedy vs random}
 
+\subsection{Bayesian methods}
+
 \todo{more diverse choice in bandit strategies including}
 
 \todo{result of collaborative filtering}
 
+\subsection{Collaborative filtering and content based comparison}
+
+\subsection{Overall performance}
 
 % ------ discussion -------
 \section{Discussion}
@@ -214,6 +219,8 @@ The simulation consisted on simulating the interaction of a user and a recommend
 \todo{which strategy to use and which not to use ( including why bayes-ucb is not viable (way too much time an requires a user study to bootstrap)}
 
 \todo{content based vs collaborative, is collaborative viable}
+
+\todo{maintenant qu'on a fait la recherche, si tu devais créer un vrai système tu utilises quoi comme technique}
 
 \todo{futur work, what could be done if you give me 10 IA guys for a week}
 
