--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -193,11 +193,25 @@ We conducted an empirical efficiency study of the algorithms mentioned above as 
 
 Experiments were conducted on personal computer and the programming language $python$ was used to implement models and algorithms.
 
-The simulation consisted on simulating the interaction of a user and a recommender. \todo{explain the simulation better}
+The simulation consisted on simulating the interaction of a user and a recommender. Results can be found in section \ref{results} \todo{explain the simulation better}
+
+\subsection{Metrics}
+
+In order to evaluate our algorithms and models in term of movie recommendation performance, an assortment of metrics retained. They could be formalised as follows.
+
+\subsubsection{Regret}
+
+The regret can be defined
+
+\subsubsection{Accuracy}
+
+\subsubsection{Average rating}
+
+\subsubsection{Recommendation time}
 
 
 % ------ results -------
-\section{Results}
+\section{Results} \label{results}
 
 \todo{simple result of adaptation of music paper to movie paper avec greedy vs random}
 
@@ -205,9 +219,18 @@ The simulation consisted on simulating the interaction of a user and a recommend
 
 \todo{more diverse choice in bandit strategies including}
 
-\todo{result of collaborative filtering}
 
 \subsection{Collaborative filtering and content based comparison}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=3.4in]{img/collabo1.png}
+\caption{Average regret}
+\label{schema}
+\end{center}
+\end{figure}
+
+\todo{result of collaborative filtering}
 
 \subsection{Overall performance}
 
@@ -223,6 +246,7 @@ The simulation consisted on simulating the interaction of a user and a recommend
 \todo{maintenant qu'on a fait la recherche, si tu devais créer un vrai système tu utilises quoi comme technique}
 
 \todo{futur work, what could be done if you give me 10 IA guys for a week}
+% combined content based and collaborative filtering
 
 \section{Conclusion}
 
