--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -77,3 +77,11 @@
   year={2010},
   organization={ACM}
 }
+
+@inproceedings{lu2010contextual,
+  title={Contextual Multi-Armed Bandits.},
+  author={Lu, Tyler and P{\'a}l, D{\'a}vid and P{\'a}l, Martin},
+  booktitle={AISTATS},
+  pages={485--492},
+  year={2010}
+}
